# search-x-agents

./: CLAUDE.md  Cargo.toml  README.md
.claude/commands/: release.md
.github/workflows/: ci.yml  gitleaks.yml  release.yml
_memory_/: architecture.md  gotchas.md  key-files.md  patterns.md
src/: main.rs
src/sources/: antigravity.rs  claude.rs  codex.rs  cowork.rs  hermes.rs  mod.rs  openclaw.rs  pi.rs
tests/: integration_tests.rs
tests/fixtures/obsidian-vault/: Daily Notes.md  Projects.md
