[package]
name = "search-x-agents"
version = "0.7.0"
edition = "2024"
description = "Fast CLI to search across agents session history"
license = "MIT"
repository = "https://github.com/eRom/search-x-agents"
homepage = "https://github.com/eRom/search-x-agents"
readme = "README.md"
keywords = ["claude", "openclaw", "codex", "antigravity", "pi", "cowork", "hermes", "search", "cli", "ai"]
categories = ["command-line-utilities"]
authors = ["Romain Ecarnot <romain.ecarnot@gmail.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
glob = "0.3"
chrono = "0.4"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "search_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.bench]
opt-level = 3
lto = true
